--- a/BSiNS/Src/Components/com_Header.fx.yaml
+++ b/BSiNS/Src/Components/com_Header.fx.yaml
@@ -4,7 +4,7 @@ com_Header As CanvasComponent:
     Height: =125
     IsEntryScreen: =false
     IsMobile: =true
-    ScannedItem: =ScannedItem
+    ScannedItem: =First(bcr_Inv_1.Barcodes).Value
     Title: ="Text"
     Width: =App.Width
     X: =0
@@ -97,11 +97,7 @@ com_Header As CanvasComponent:
                 LayoutMinHeight: =30
                 LayoutMinWidth: =280
                 OnCancel: =false
-                OnScan: |-
-                    =Set(
-                        ScannedItem,
-                        First(bcr_Inv_1.Barcodes).Value
-                    )
+                OnScan: =
                 PaddingBottom: =0
                 PaddingLeft: =0
                 PaddingRight: =0
@@ -109,7 +105,7 @@ com_Header As CanvasComponent:
                 PressedBorderColor: =RGBA(189, 49, 51, 1)
                 PressedContentColor: =RGBA(189, 49, 51, 1)
                 PressedFillColor: =RGBA(255, 255, 255, 1)
-                ScanningMode: ='BarcodeReader.ScanningMode'.SelectToScan
+                ScanningMode: ='BarcodeReader.ScanningMode'.AutomaticallyScan
                 Text: ="Skener"
                 TextAlignment: =Align.Center
                 TextColor: =RGBA(0, 0, 0, 1)
