--- a/BSiNS/Src/scr_Entry.fx.yaml
+++ b/BSiNS/Src/scr_Entry.fx.yaml
@@ -19,6 +19,7 @@
             isModalOpen,
             false
         );
+        LoadData(lockedItems, "lockedItems", true);
         UpdateContext({Files: ParseJSON(GetAll.Run().outputfiles)});
         UpdateContext(
             {
