--- a/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
@@ -438,9 +438,15 @@
             ZIndex: =3
 
             Container4 As groupContainer.horizontalAutoLayoutContainer:
+                LayoutAlignItems: =LayoutAlignItems.Stretch
+                LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
                 LayoutMinHeight: =50
                 LayoutMinWidth: =250
                 LayoutMode: =LayoutMode.Auto
+                PaddingBottom: =5
+                PaddingLeft: =5
+                PaddingRight: =5
+                PaddingTop: =5
                 RadiusBottomLeft: =4
                 RadiusBottomRight: =4
                 RadiusTopLeft: =4
@@ -449,8 +455,9 @@
 
                 txt_InvDocumentName As Text:
                     Align: ='TextCanvas.Align'.Start
-                    AutoHeight: =false
+                    AutoHeight: =true
                     DisplayMode: =DisplayMode.Edit
+                    FillPortions: =1
                     Height: =Parent.Height
                     LayoutMinHeight: =32
                     LayoutMinWidth: =96
@@ -481,8 +488,8 @@
                     HoverBorderColor: =RGBA(189, 49, 51, 1)
                     HoverContentColor: =RGBA(255, 255, 255, 1)
                     HoverFillColor: =RGBA(189, 49, 51, 1)
-                    LayoutMinHeight: =70
-                    LayoutMinWidth: =280
+                    LayoutMinHeight: =35
+                    LayoutMinWidth: =80
                     OnCancel: =false
                     OnScan: |-
                         =Set(
@@ -501,7 +508,7 @@
                     TextAlignment: =Align.Center
                     TextColor: =RGBA(0, 0, 0, 1)
                     VerticalAlign: =VerticalAlign.Middle
-                    Visible: =isMobile
+                    Visible: =!isMobile
                     Width: =80
                     X: =40
                     Y: =15
