--- a/BSiNS/CanvasManifest.json
+++ b/BSiNS/CanvasManifest.json
@@ -100,7 +100,7 @@
       "zeroalltabindexes": true
     },
     "Author": "",
-    "BindingErrorCount": 241,
+    "BindingErrorCount": 245,
     "ContainsThirdPartyPcfControls": false,
     "DefaultConnectedDataSourceMaxGetRowsCount": 500,
     "DocumentAppType": "DesktopOrTablet",
@@ -115,6 +115,7 @@
     "FileID": "59b4b38a-4a1b-4c4b-ac59-bfc860c9a040",
     "Id": "b35b18dd-0139-49e1-a028-e3cbb9c382ec",
     "InstrumentationKey": "",
+    "LocalDatabaseReferences": "",
     "ManualOfflineProfileId": "",
     "Name": "Badeco sljedivost i napredno sklad",
     "OriginatingVersion": "1.341",
