--- a/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
@@ -544,7 +544,11 @@
                         Set(
                             QuantityCompleted,
                             Value(glr_Inv.Selected.Qty_Phys_Inventory)
-                        )
+                        );
+                        Set(
+                            LotNo,
+                            glr_Inv.Selected.Lot_No
+                        );
                     );
                     Set(
                         ScannedItem,
