--- a/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
@@ -557,6 +557,20 @@
                 Width: =Parent.Width
                 ZIndex: =3
 
+                Icon2 As icon.Check:
+                    BorderColor: =App.Theme.Colors.Darker40
+                    Color: =App.Theme.Colors.Darker30
+                    DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                    DisabledColor: =RGBA(244, 244, 244, 1)
+                    Height: =32
+                    Icon: =Icon.Check
+                    OnSelect: =Select(Parent)
+                    Visible: =LookUp(Filter(lockedItems, ThisRecord.documentId = SelectedDocumentName), lineId = ThisItem.'Line_No.', isLocked)
+                    Width: =32
+                    X: =Parent.TemplateWidth - 90
+                    Y: =lbl_InvBarcode.Y
+                    ZIndex: =3
+
                 rct_InvSeparator As rectangle:
                     BorderColor: =App.Theme.Colors.Darker40
                     Fill: =RGBA(255, 255, 255, 1)
@@ -564,7 +578,7 @@
                     OnSelect: =Select(Parent)
                     Width: =Parent.TemplateWidth
                     Y: =Parent.TemplateHeight - Self.Height
-                    ZIndex: =5
+                    ZIndex: =4
 
                 rct_Inv As rectangle:
                     BorderColor: =App.Theme.Colors.Darker40
@@ -573,14 +587,14 @@
                     OnSelect: =Select(Parent)
                     Visible: =ThisItem.IsSelected
                     Width: =4
-                    ZIndex: =6
+                    ZIndex: =5
 
                 icn_InvAdd As icon.AddDocument:
                     BorderColor: =App.Theme.Colors.Darker40
                     Color: =App.Theme.Colors.Darker30
                     DisabledBorderColor: =RGBA(166, 166, 166, 1)
                     DisabledColor: =RGBA(244, 244, 244, 1)
-                    Height: =30
+                    Height: =32
                     Icon: =Icon.AddDocument
                     OnSelect: |
                         =Collect(
@@ -612,10 +626,10 @@
                                 Barcode: ThisItem.Barcode
                             }
                         );
-                    Width: =25
+                    Width: =32
                     X: =Parent.TemplateWidth - 50
                     Y: =lbl_InvBarcode.Y
-                    ZIndex: =19
+                    ZIndex: =10
 
                 grp_InvBarcode As group:
                     Height: =5
@@ -643,7 +657,7 @@
                         Width: =lbl_InvItemNo.Width
                         X: =lbl_InvItemNo.X
                         Y: =lbl_InvQuantity.Height + lbl_InvQuantity.Y + 25
-                        ZIndex: =18
+                        ZIndex: =9
 
                     lbl_InvBarcodeValue As label:
                         AutoHeight: =true
@@ -663,7 +677,7 @@
                         Width: =Parent.TemplateWidth - lbl_ItemNo.Width * 2
                         X: =lbl_InvBarcode.Width
                         Y: =lbl_InvBarcode.Y
-                        ZIndex: =20
+                        ZIndex: =11
 
                 grp_InvQuantity As group:
                     Height: =5
@@ -691,7 +705,7 @@
                         Width: =lbl_InvItemNo.Width
                         X: =lbl_InvItemNo.X
                         Y: =lbl_InvExpDate.Height + lbl_InvExpDate.Y + 25
-                        ZIndex: =14
+                        ZIndex: =8
 
                     lbl_InvQuantityValue As label:
                         AutoHeight: =true
@@ -711,7 +725,7 @@
                         Width: =Parent.TemplateWidth - lbl_ItemNo.Width * 2
                         X: =lbl_InvQuantity.Width
                         Y: =lbl_InvQuantity.Y
-                        ZIndex: =21
+                        ZIndex: =12
 
                 grp_InvItemNo As group:
                     Height: =5
@@ -758,7 +772,7 @@
                         Width: =Parent.TemplateWidth - lbl_ItemNo.Width * 2
                         X: =lbl_InvItemNo.Width
                         Y: =lbl_InvItemNo.Y
-                        ZIndex: =25
+                        ZIndex: =16
 
                 grp_InvDescription As group:
                     Height: =5
@@ -806,7 +820,7 @@
                         Width: =Parent.TemplateWidth - lbl_ItemNo.Width * 2
                         X: =lbl_InvDescription.Width
                         Y: =lbl_InvDescription.Y
-                        ZIndex: =24
+                        ZIndex: =15
 
                 grp_InvLOTNo As group:
                     Height: =5
@@ -833,7 +847,7 @@
                         VerticalAlign: =VerticalAlign.Top
                         Width: =lbl_InvItemNo.Width
                         Y: =lbl_InvDescription.Height + lbl_InvDescription.Y + 25
-                        ZIndex: =12
+                        ZIndex: =6
 
                     lbl_InvLOTNoValue As label:
                         AutoHeight: =true
@@ -853,7 +867,7 @@
                         Width: =Parent.TemplateWidth - lbl_ItemNo.Width * 2
                         X: =lbl_InvLOTNo.Width
                         Y: =lbl_InvLOTNo.Y
-                        ZIndex: =23
+                        ZIndex: =14
 
                 grp_InvExpDate As group:
                     Height: =5
@@ -880,7 +894,7 @@
                         VerticalAlign: =VerticalAlign.Top
                         Width: =lbl_InvItemNo.Width
                         Y: =lbl_InvLOTNo.Height + lbl_InvLOTNo.Y + 25
-                        ZIndex: =13
+                        ZIndex: =7
 
                     lbl_InvExpDateValue As label:
                         AutoHeight: =true
@@ -900,7 +914,7 @@
                         Width: =Parent.TemplateWidth - lbl_ItemNo.Width * 2
                         X: =lbl_InvExpDate.Width
                         Y: =lbl_InvExpDate.Y
-                        ZIndex: =22
+                        ZIndex: =13
 
             spn_InvLoader As Spinner:
                 BasePaletteColor: =
@@ -992,10 +1006,21 @@
                                     SelectedFolder,
                                     ReadyForNAVProcessing
                                 );
+                                SaveData(
+                                    Filter(
+                                        lockedItems,
+                                        ThisRecord.documentId <> SelectedDocumentName
+                                    ),
+                                    "lockedItems"
+                                );
                                 Navigate(
                                     scr_Entry,
                                     ScreenTransition.Fade
-                                )
+                                ),
+                                SaveData(
+                                    lockedItems,
+                                    "lockedItems"
+                                );
                             )
                         ),
                         Set(
