--- a/BSiNS/Src/Components/com_Header.fx.yaml
+++ b/BSiNS/Src/Components/com_Header.fx.yaml
@@ -24,6 +24,7 @@ com_Header As CanvasComponent:
         ZIndex: =2
 
         hdr_ScreenHeader As Header:
+            BasePaletteColor: =
             DisplayMode: =DisplayMode.Edit
             Height: =75
             LayoutMinHeight: =75
