--- a/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
@@ -820,7 +820,12 @@
             "glr_ProLines As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
                 AlignInContainer: =AlignInContainer.SetByContainer
                 BorderColor: =App.Theme.Colors.Darker40
-                Default: =First(Filter(colLines, Line_No = scannedItem))
+                Default: |-
+                    =LookUp(
+                        colLines,
+                        Barcode = ScannedItem,
+                        ThisRecord
+                    )
                 DelayItemLoading: =true
                 Fill: =RGBA(237, 237, 237, 1)
                 Height: =562
@@ -829,8 +834,12 @@
                 LayoutMinHeight: =Self.TemplateHeight * Self.AllItemsCount
                 LayoutMinWidth: =320
                 LoadingSpinner: =LoadingSpinner.Data
-                OnSelect: |
+                OnSelect: |-
                     =UpdateContext({wizardStep: 2});
+                    Set(
+                        ScannedItem,
+                        Blank()
+                    );
                 TemplatePadding: =0
                 TemplateSize: =164
                 Visible: =If(!isLoading, wizardStep = 1)
@@ -1476,7 +1485,7 @@
         RadiusBottomRight: =4
         RadiusTopLeft: =4
         RadiusTopRight: =4
-        Visible: =isModalOpen
+        Visible: =false
         Width: |
             =Parent.Width
         ZIndex: =2
@@ -1829,4 +1838,10 @@
                         X: =0
                         Y: =0
                         ZIndex: =2
+
+    com_Modal_1 As com_Modal:
+        LineId: =glr_ProLines.Selected.Line_No
+        ResEntryId: =glr_ProResEntries.Selected.Entry_No
+        Visible: =isModalOpen
+        ZIndex: =3
 
