--- a/BSiNS/Src/scr_Entry.fx.yaml
+++ b/BSiNS/Src/scr_Entry.fx.yaml
@@ -19,7 +19,11 @@
             isModalOpen,
             false
         );
-        LoadData(lockedItems, "lockedItems", true);
+        LoadData(
+            lockedItems,
+            "lockedItems",
+            true
+        );
         UpdateContext({Files: ParseJSON(GetAll.Run().outputfiles)});
         UpdateContext(
             {
