--- a/BSiNS/Src/Components/com_Header.fx.yaml
+++ b/BSiNS/Src/Components/com_Header.fx.yaml
@@ -4,6 +4,7 @@ com_Header As CanvasComponent:
     Height: =125
     IsEntryScreen: =false
     IsMobile: =true
+    ScannedItem: =ScannedItem
     Title: ="Text"
     Width: =App.Width
     X: =0
@@ -78,4 +79,35 @@ com_Header As CanvasComponent:
                 X: =0
                 Y: =0
                 ZIndex: =1
+
+            "BarcodeReader2 As 'Barcode Reader'":
+                BorderFillColor: =RGBA(189, 49, 51, 1)
+                DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                DisabledContentColor: =RGBA(166, 166, 166, 1)
+                DisabledFillColor: =RGBA(244, 244, 244, 1)
+                DisplayMode: =DisplayMode.Edit
+                FillColor: =RGBA(189, 49, 51, 1)
+                FontSize: =16
+                Height: =70
+                HoverBorderColor: =RGBA(88, 115, 171, 1)
+                HoverContentColor: =RGBA(255, 255, 255, 1)
+                HoverFillColor: =RGBA(47, 81, 151, 1)
+                LayoutMinHeight: =20
+                LayoutMinWidth: =280
+                OnCancel: =false
+                OnScan: =Set(ScannedItem, Barcode)
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                PressedBorderColor: =RGBA(56, 96, 178, 1)
+                PressedContentColor: =RGBA(56, 96, 178, 1)
+                PressedFillColor: =RGBA(255, 255, 255, 1)
+                ScanningMode: ='BarcodeReader.ScanningMode'.AutomaticallyScan
+                Text: ="Skener"
+                TextColor: =RGBA(255, 255, 255, 1)
+                Width: =100
+                X: =0
+                Y: =0
+                ZIndex: =2
 
